--- a/facebook-advertising.html
+++ b/facebook-advertising.html
@@ -90,7 +90,7 @@
                                  <li><a href="copywriting-agency.html" class="dropdown-item">Copywriting</a></li>
                                  <li><a href="branding-agency.html" class="dropdown-item">Branding & laptop Design</a></li>
                                  <li><a href="podcast-marketing.html" class="dropdown-item">Prodcast Marketing</a></li>
-                                 <li><a href="youtube-advertising.html" class="dropdown-item">Youtube Marketing</a></li>
+                                 <li><a href="youtube-marketing.html" class="dropdown-item">Youtube Marketing</a></li>
                               </ul>
                            </li>
                            <li class="dropdown-submenu">
@@ -100,7 +100,7 @@
                                  <li><a href="klaviyo-email-marketing.html" class="dropdown-item">Klaviyo Email Marketing</a></li>
                               </ul>
                            </li>
-                           <li class="dropdown-menuParent"><a href="#" class="dropdown-item">Digital Stragety</a></li>
+                           <li class="dropdown-menuParent"><a href="digital-strategy.html" class="dropdown-item">Digital Stragety</a></li>
                         </ul>
                      </li>
                      <li class="nav-item dropdown">
@@ -118,7 +118,7 @@
                         <a class="nav-link" href="blogs.html">Blog</a>
                      </li>
                   </ul>
-                  <a class="nav-link btn nav-btn" href="date-time.html">Get A Qoute</a>
+                  <a class="nav-link btn nav-btn" href="date-time.html">Schedule a Call</a>
                </div>
             </div>
          </nav>
@@ -130,7 +130,7 @@
                      <div class="col-md-12 col-lg-8">
                         <h1 class="banner-main-heading">Facebook Advertising<br> <span class="redOne-fill-color"> Agency</span></h1>
                         <h3 class="banner-sub-heading">As the leading Facebook Advertising Agency in Dubai, we can help you reach your perfect client and promote your business efficiently and effectively. </h3>
-                        <a class="nav-link btn nav-btn mt-4" href="#">Get A Qoute</a>
+                        <a class="nav-link btn nav-btn mt-4" href="date-time.html">Schedule a Call</a>
                      </div>
                   </div>
                </div>
