--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                               <li><a href="copywriting-agency.html" class="dropdown-item">Copywriting</a></li>
                               <li><a href="branding-agency.html" class="dropdown-item">Branding & laptop Design</a></li>
                               <li><a href="podcast-marketing.html" class="dropdown-item">Prodcast Marketing</a></li>
-                              <li><a href="youtube-advertising.html" class="dropdown-item">Youtube Marketing</a></li>
+                              <li><a href="youtube-marketing.html" class="dropdown-item">Youtube Marketing</a></li>
                            </ul>
                         </li>
                         <li class="dropdown-submenu">
@@ -103,7 +103,7 @@
                               <li><a href="klaviyo-email-marketing.html" class="dropdown-item">Klaviyo Email Marketing</a></li>
                            </ul>
                         </li>
-                        <li class="dropdown-menuParent"><a href="#" class="dropdown-item">Digital Stragety</a></li>
+                        <li class="dropdown-menuParent"><a href="digital-strategy.html" class="dropdown-item">Digital Stragety</a></li>
                      </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -121,34 +121,12 @@
                      <a class="nav-link" href="blogs.html">Blog</a>
                   </li>
                </ul>
-               <a class="nav-link btn nav-btn" href="date-time.html">Get A Qoute</a>
+               <a class="nav-link btn nav-btn" href="date-time.html">Schedule a Call</a>
             </div>
          </div>
       </nav>
       <div class="top-header">
          <div class="container">
-            <!-- <div class="row main-row">
-                  <div class="col-md-6">
-                      <img src="assets/images/Group 182.png" class="img-fluid">
-                  </div>
-                  <div class="col-md-6 right-sec">
-                      <div class="right-text-sec">
-                          <h1 class="top-right-text">DO YOU</h1>
-                          <h1>WANT MORE<br>
-                              CONNECTIONS?</h1>
-                          <h3>Let us help you.</h3>
-                          <div class="text-center">
-                              <p>We’re a Digital Marketing Agency in London, made up of a group of 
-                                  passionate individuals who get excited about helping small to medium sized businesses create impact with their customers.</p>
-                          </div>
-                          <div class="buttons">
-                              <button class="btn black-fill-btn">Who we are?</button>
-                              <button class="btn white-outline-btn">How we Work</button>
-                          </div>
-                          <h1 class="bottom-right-text">01</h1>
-                      </div>
-                  </div>
-                  </div> -->
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -1444,7 +1422,7 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-3 mt-3">
                <div>
-                  <p class="footer-sub-heading">LONDON OFFICE</p>
+                  <p class="footer-sub-heading">DUBAI OFFICE</p>
                   <ul class="footer-ul">
                      <li><a href="#">Phone: 0203 963 0810 </a></li>
                      <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
@@ -1454,16 +1432,16 @@
             </div>
          </div>
          <hr class="mt-5 mb-3">
-         <div class="row bottom-row mt-5">
+         <div class="row bottom-row mt-5 align-items-center">
             <div class="col-md-8">
-               <p class="">The Good Marketer Group Ltd | Sitemap | Privacy Policy | VAT Number: 296441964</p>
+               <p class="">Disclaimer: The opinions expressed within Reviews are those of the author and not the views or opinions of Sahaa Limited. Registered Office: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai. © Sahaa Marketing LLC FZ 2022. All rights reserved. Sahaa & Sahaa Pages and other ™ are trademarks of Sahaa Marketing LLC FZ.</p>
             </div>
             <div class="col-md-4">
                <div class="text-start text-md-center d-flex">
-                  <a href="#" class="icon-span"><i class="fa fa-twitter"></i></a>
-                  <a href="#" class="icon-span"><i class="fa fa-facebook-f"></i></a>
-                  <a href="#" class="icon-span"><i class="fa fa-instagram"></i></a>
-                  <a href="#" class="icon-span"><i class="fa fa-whatsapp"></i></a>
+                  <a href="https://twitter.com/Sahaa_me2022" class="icon-span"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com/Sahaa.me.uae/?ref=pages_you_manage%5C" class="icon-span"><i class="fa fa-facebook-f"></i></a>
+                  <a href="https://www.instagram.com/sahaa.me/" class="icon-span"><i class="fa fa-instagram"></i></a>
+                  <a href="https://www.pinterest.com/business/hub/" class="icon-span"><i class="fa fa-pinterest"></i></a>
                </div>
             </div>
          </div>
