--- a/case-study.html
+++ b/case-study.html
@@ -92,7 +92,7 @@
                                      <li><a href="copywriting-agency.html" class="dropdown-item">Copywriting</a></li>
                                      <li><a href="branding-agency.html" class="dropdown-item">Branding & laptop Design</a></li>
                                      <li><a href="podcast-marketing.html" class="dropdown-item">Prodcast Marketing</a></li>
-                                     <li><a href="youtube-advertising.html" class="dropdown-item">Youtube Marketing</a></li>
+                                     <li><a href="youtube-marketing.html" class="dropdown-item">Youtube Marketing</a></li>
                                   </ul>
                                </li>
                                <li class="dropdown-submenu">
@@ -102,7 +102,7 @@
                                      <li><a href="klaviyo-email-marketing.html" class="dropdown-item">Klaviyo Email Marketing</a></li>
                                   </ul>
                                </li>
-                               <li class="dropdown-menuParent"><a href="#" class="dropdown-item">Digital Stragety</a></li>
+                               <li class="dropdown-menuParent"><a href="digital-strategy.html" class="dropdown-item">Digital Stragety</a></li>
                             </ul>
                          </li>
                          <li class="nav-item dropdown">
@@ -120,7 +120,7 @@
                             <a class="nav-link" href="blogs.html">Blog</a>
                          </li>
                       </ul>
-                      <a class="nav-link btn nav-btn" href="date-time.html">Get A Qoute</a>
+                      <a class="nav-link btn nav-btn" href="date-time.html">Schedule a Call</a>
                    </div>
                 </div>
              </nav>
