--- a/index.html
+++ b/index.html
@@ -762,10 +762,10 @@
                   </tr>
                   <tr class="head-table-two">
                      <td class="empty">&nbsp;</td>
-                     <td>750<br>Per month + VAT</td>
+                     <td>2000<br>Per month + VAT</td>
                      <td>1500<br>Per month + VAT</td>
-                     <td>2400<br>Per month + VAT</td>
-                     <td>4000<br>Per month + VAT</td>
+                     <td>6000<br>Per month + VAT</td>
+                     <td>10000<br>Per month + VAT</td>
                   </tr>
                </thead>
                <tbody>
@@ -900,7 +900,7 @@
                      <h1 class="m-0">Starter</h1>
                   </div>
                   <div class="card-body">
-                     <h1>750</h1>
+                     <h1>2000</h1>
                      <h6>Per Month + VAT</h6>
                      <button class="btn package-view-details-btn">View Details</button>
                   </div>
@@ -924,7 +924,7 @@
                      <h1 class="m-0">Elite</h1>
                   </div>
                   <div class="card-body">
-                     <h1>2400</h1>
+                     <h1>6000</h1>
                      <h6>Per Month + VAT</h6>
                      <button class="btn package-view-details-btn">View Details</button>
                   </div>
@@ -937,7 +937,7 @@
                      </h1>
                   </div>
                   <div class="card-body">
-                     <h1>4000</h1>
+                     <h1>10000</h1>
                      <h6>Per Month + VAT</h6>
                      <button class="btn package-view-details-btn">View Details</button>
                   </div>
@@ -1388,8 +1388,7 @@
                      <li><a href="what-we-do.html">What We Do</a></li>
                      <li><a href="blogs.html">Blog</a></li>
                      <li><a href="case-study.html">Case Studies</a></li>
-                     <li><a href="#">Contact Us</a></li>
-                     <li><a href="#">Careers</a></li>
+                     <li><a href="date-time.html">Contact Us</a></li>
                   </ul>
                </div>
             </div>
@@ -1404,9 +1403,9 @@
                      <li><a href="google-advertising-agency.html">Google Advertising</a></li>
                      <li><a href="social-media-management-services.html">Social Media Management</a></li>
                      <li><a href="ecommerce-seo.html">eCommerce Agency</a></li>
-                     <li><a href="#">Retail Marketing</a></li>
-                     <li><a href="#">Direct To Consumer Marketing</a></li>
-                     <li><a href="#">Growth Marketing</a></li>
+                     <li><a href="digital-strategy.html">Digital Strategy</a></li>
+                     <li><a href="content-marketing.html">Content Marketing</a></li>
+                     <li><a href="shopify-development-agency.html">Shopify Development</a></li>
                   </ul>
                </div>
             </div>
