--- a/web-development-agency.html
+++ b/web-development-agency.html
@@ -452,75 +452,74 @@
     <!-- footer section start -->
     <section class="footer-sec">
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-6 col-lg-3 mt-3">
-                    <div>
-                        <img src="assets/images/new/SM Light@2x.png" class="img-fluid">
-                        <ul class="footer-ul">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Who We Are</a></li>
-                            <li><a href="#">What We Do</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Case Studies</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Careers</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3 mt-3">
-                    <div>
-                        <p class="footer-sub-heading">WHAT WE DO</p>
-                        <ul class="footer-ul">
-                            <li><a href="#">Facebook Advertising</a></li>
-                            <li><a href="#">Instagram Advertising</a></li>
-                            <li><a href="#">SEO</a></li>
-                            <li><a href="#">Email Marketing</a></li>
-                            <li><a href="#">Google Advertising</a></li>
-                            <li><a href="#">Social Media Management</a></li>
-                            <li><a href="#">eCommerce Agency</a></li>
-                            <li><a href="#">Retail Marketing</a></li>
-                            <li><a href="#">Direct To Consumer Marketing</a></li>
-                            <li><a href="#">Growth Marketing</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3 mt-3">
-                    <div>
-                        <p class="footer-sub-heading">LONDON OFFICE</p>
-                        <ul class="footer-ul">
-                            <li><a href="#">Phone: 0203 963 0810 </a></li>
-                            <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                            <li><a href="#">info@thegoodmarketer.co.uk</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-3 mt-3">
-                    <div>
-                        <p class="footer-sub-heading">LONDON OFFICE</p>
-                        <ul class="footer-ul">
-                            <li><a href="#">Phone: 0203 963 0810 </a></li>
-                            <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
-                            <li><a href="#">info@thegoodmarketer.co.uk</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <hr class="mt-5 mb-3">
-            <div class="row bottom-row mt-5">
-                <div class="col-md-8">
-                    <p class="">The Good Marketer Group Ltd | Sitemap | Privacy Policy | VAT Number: 296441964</p>
-                </div>
-                <div class="col-md-4">
-                    <div class="text-start text-md-center d-flex">
-                        <a href="#" class="icon-span"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="icon-span"><i class="fa fa-facebook-f"></i></a>
-                        <a href="#" class="icon-span"><i class="fa fa-instagram"></i></a>
-                        <a href="#" class="icon-span"><i class="fa fa-whatsapp"></i></a>
-                    </div>
-                </div>
-            </div>
+           <div class="row">
+              <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                 <div>
+                    <img src="assets/images/new/SM Light@2x.png" class="img-fluid">
+                    <ul class="footer-ul">
+                       <li><a href="index.html">Home</a></li>
+                       <li><a href="meet-the-team.html">Who We Are</a></li>
+                       <li><a href="what-we-do.html">What We Do</a></li>
+                       <li><a href="blogs.html">Blog</a></li>
+                       <li><a href="case-study.html">Case Studies</a></li>
+                       <li><a href="date-time.html">Contact Us</a></li>
+                    </ul>
+                 </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                 <div>
+                    <p class="footer-sub-heading">WHAT WE DO</p>
+                    <ul class="footer-ul">
+                       <li><a href="facebook-advertising.html">Facebook Advertising</a></li>
+                       <li><a href="instagram-advertising.html">Instagram Advertising</a></li>
+                       <li><a href="search-engine-optimisation.html">SEO</a></li>
+                       <li><a href="email-marketing.html">Email Marketing</a></li>
+                       <li><a href="google-advertising-agency.html">Google Advertising</a></li>
+                       <li><a href="social-media-management-services.html">Social Media Management</a></li>
+                       <li><a href="ecommerce-seo.html">eCommerce Agency</a></li>
+                       <li><a href="digital-strategy.html">Digital Strategy</a></li>
+                       <li><a href="content-marketing.html">Content Marketing</a></li>
+                       <li><a href="shopify-development-agency.html">Shopify Development</a></li>
+                    </ul>
+                 </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                 <div>
+                    <p class="footer-sub-heading">LONDON OFFICE</p>
+                    <ul class="footer-ul">
+                       <li><a href="#">Phone: 0203 963 0810 </a></li>
+                       <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
+                       <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                    </ul>
+                 </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                 <div>
+                    <p class="footer-sub-heading">DUBAI OFFICE</p>
+                    <ul class="footer-ul">
+                       <li><a href="#">Phone: 0203 963 0810 </a></li>
+                       <li><a href="#">Address: 4 Ravey Street, London, EC2A 4QP</a></li>
+                       <li><a href="#">info@thegoodmarketer.co.uk</a></li>
+                    </ul>
+                 </div>
+              </div>
+           </div>
+           <hr class="mt-5 mb-3">
+           <div class="row bottom-row mt-5 align-items-center">
+              <div class="col-md-8">
+                 <p class="">Disclaimer: The opinions expressed within Reviews are those of the author and not the views or opinions of Sahaa Limited. Registered Office: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai. © Sahaa Marketing LLC FZ 2022. All rights reserved. Sahaa & Sahaa Pages and other ™ are trademarks of Sahaa Marketing LLC FZ.</p>
+              </div>
+              <div class="col-md-4">
+                 <div class="text-start text-md-center d-flex">
+                    <a href="https://twitter.com/Sahaa_me2022" class="icon-span"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/Sahaa.me.uae/?ref=pages_you_manage%5C" class="icon-span"><i class="fa fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/sahaa.me/" class="icon-span"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.pinterest.com/business/hub/" class="icon-span"><i class="fa fa-pinterest"></i></a>
+                 </div>
+              </div>
+           </div>
         </div>
-    </section>
+     </section>
     <!-- footer section end -->
     <script src="assets/js/jquery.js"></script>
     <script src='assets/js/bootstrap.bundle.js'></script>
