add blogs text and link

--- a/blogs.html
+++ b/blogs.html
@@ -150,13 +150,13 @@
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
-                                    <h3>The Importance Of Increasing Return On Ad Spend</h3>
-                                    <p class="global-p">The Importance Of Increasing Return On Ad Spend Now that you’ve successfully got your ads out of the learning phase, it’s time to focus on</p>
-                                    <a href="#">READ MORE</a>
+                                    <h3>Some of the benefits of pay per click include</h3>
+                                    <p class="global-p">Pay per click allows you to target your advertising to people who are most likely to be interested in what you have to offer. You can target your advertising by keyword, by topic, by interests, and more.</p>
+                                    <a href="pay-per-click-blog.html">READ MORE</a>
                                 </div>
                             </div>
                             <div class="blog-card-footer">
-                                <p class="m-0">August 2, 2022 12:26 pm</p>
+                                <p class="m-0">March 18, 2022</p>
                             </div>
                         </div>
                     </div>
@@ -167,13 +167,13 @@
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
-                                    <h3>The Importance Of Increasing Return On Ad Spend</h3>
-                                    <p class="global-p">The Importance Of Increasing Return On Ad Spend Now that you’ve successfully got your ads out of the learning phase, it’s time to focus on</p>
-                                    <a href="#">READ MORE</a>
+                                    <h3>Ecommerce SEO services</h3>
+                                    <p class="global-p">If you're running an online store, then you know how important it is to have a strong SEO presence. After all, you want your site to show up as high as possible in search engine results pages, so that potential customers can find you easily.</p>
+                                    <a href="ecommerce-SEO-services-blog.html">READ MORE</a>
                                 </div>
                             </div>
                             <div class="blog-card-footer">
-                                <p class="m-0">August 2, 2022 12:26 pm</p>
+                                <p class="m-0">Octuber 5, 2021</p>
                             </div>
                         </div>
                     </div>
@@ -184,13 +184,13 @@
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
-                                    <h3>The Importance Of Increasing Return On Ad Spend</h3>
-                                    <p class="global-p">The Importance Of Increasing Return On Ad Spend Now that you’ve successfully got your ads out of the learning phase, it’s time to focus on</p>
-                                    <a href="#">READ MORE</a>
+                                    <h3>Social Media Marketing</h3>
+                                    <p class="global-p">Social media marketing is one of the most efficient and effective ways to connect with customers and promote your brand. It allows customers and customers’ friends and followers to connect with your company or product in a variety of ways.</p>
+                                    <a href="social-media-marketing-blog.html">READ MORE</a>
                                 </div>
                             </div>
                             <div class="blog-card-footer">
-                                <p class="m-0">August 2, 2022 12:26 pm</p>
+                                <p class="m-0">August 2, 2022</p>
                             </div>
                         </div>
                     </div>
@@ -201,13 +201,13 @@
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
-                                    <h3>The Importance Of Increasing Return On Ad Spend</h3>
-                                    <p class="global-p">The Importance Of Increasing Return On Ad Spend Now that you’ve successfully got your ads out of the learning phase, it’s time to focus on</p>
-                                    <a href="#">READ MORE</a>
+                                    <h3>Facebook marketing expert</h3>
+                                    <p class="global-p">Facebook marketing experts are professionals who have a deep understanding of how Facebook can be used to market a business. They know how to create and run successful Facebook campaigns, and can help businesses to reach</p>
+                                    <a href="Facebook-marketing-expert-blog.html">READ MORE</a>
                                 </div>
                             </div>
                             <div class="blog-card-footer">
-                                <p class="m-0">August 2, 2022 12:26 pm</p>
+                                <p class="m-0">March 2, 2022</p>
                             </div>
                         </div>
                     </div>
@@ -218,13 +218,13 @@
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
-                                    <h3>The Importance Of Increasing Return On Ad Spend</h3>
-                                    <p class="global-p">The Importance Of Increasing Return On Ad Spend Now that you’ve successfully got your ads out of the learning phase, it’s time to focus on</p>
-                                    <a href="#">READ MORE</a>
+                                    <h3>Digital marketing agencies</h3>
+                                    <p class="global-p">When it comes to marketing, businesses have a lot of choices to make. One of the most important decisions is deciding which marketing strategy to use. This decision used to be simpler since there were only a few traditional</p>
+                                    <a href="Digital-marketing-agencies-blog.html">READ MORE</a>
                                 </div>
                             </div>
                             <div class="blog-card-footer">
-                                <p class="m-0">August 2, 2022 12:26 pm</p>
+                                <p class="m-0">April 21, 2022</p>
                             </div>
                         </div>
                     </div>
@@ -235,13 +235,13 @@
                             </div>
                             <div class="blog-card-body">
                                 <div class="body-text">
-                                    <h3>The Importance Of Increasing Return On Ad Spend</h3>
-                                    <p class="global-p">The Importance Of Increasing Return On Ad Spend Now that you’ve successfully got your ads out of the learning phase, it’s time to focus on</p>
-                                    <a href="#">READ MORE</a>
+                                    <h3>How does search engine optimization work?</h3>
+                                    <p class="global-p">The process of SEO involves optimizing a website or web page for the purpose of increasing its rank in the search engine results pages. The objectives of SEO are to improve the visibility and ranking of a website or web page in SERPs, generate more</p>
+                                    <a href="Search-engine-optimization-blog.html">READ MORE</a>
                                 </div>
                             </div>
                             <div class="blog-card-footer">
-                                <p class="m-0">August 2, 2022 12:26 pm</p>
+                                <p class="m-0">June 20, 2021</p>
                             </div>
                         </div>
                     </div>
