make some more changes

--- a/shopify-seo-agency.html
+++ b/shopify-seo-agency.html
@@ -687,7 +687,7 @@
                   </table>
                   <div class="mt-5">
                      <div class="col-6 m-auto">
-                        <button class="book-call-btn form-control btn">Book a Call</button>
+                        <a href="date-time.html" class="book-call-btn form-control btn">Book a Call</a>
                      </div>
                      <div class="col-10 m-auto mt-4 text-center">
                         <p class="global-p">We will be able to advise on the best package for your business during your initial 30 minute consultation.
