--- a/what-we-do.html
+++ b/what-we-do.html
@@ -133,7 +133,7 @@
                            <h1 class="banner-main-heading">What We <span class="redOne-fill-color">Do.</span></h1>
                            <h3 class="banner-sub-heading mt-4">Reach audiences on new, lucrative channels, strengthen your website or build your marketing from the ground up with The Good Marketer.</h3>
                            <h3 class="banner-sub-heading mt-5">All services are tailored to <span class="redOne-fill-color">propel your business.</span> We make the most of trends but believe in achieving fantastic results, whatever your goals and whatever channel we’re working on.</h3>
-                           <button class="btn book-a-call-btn mt-5">BOOK A CALL</button>
+                           <a href="date-time.html" class="btn book-a-call-btn mt-5">BOOK A CALL</a>
                         </div>
                      </div>
                   </div>
