--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                                  </p>
                               </div>
                               <div class="buttons">
-                                 <button class="btn black-fill-btn">Who we are?</button>
-                                 <button class="btn white-outline-btn">How we Work</button>
+                                 <a href="meet-the-team.html" class="btn black-fill-btn">Who we are?</a>
+                                 <a href="what-we-do.html" class="btn white-outline-btn">How we Work</a>
                               </div>
                               <h1 class="bottom-right-text">01</h1>
                            </div>
@@ -179,8 +179,8 @@
                                  </p>
                               </div>
                               <div class="buttons">
-                                 <button class="btn black-fill-btn">Who we are?</button>
-                                 <button class="btn white-outline-btn">How we Work</button>
+                                 <a href="meet-the-team.html" class="btn black-fill-btn">Who we are?</a>
+                                 <a href="what-we-do.html" class="btn white-outline-btn">How we Work</a>
                               </div>
                               <h1 class="bottom-right-text">02</h1>
                            </div>
@@ -204,8 +204,8 @@
                                  </p>
                               </div>
                               <div class="buttons">
-                                 <button class="btn black-fill-btn">Who we are?</button>
-                                 <button class="btn white-outline-btn">How we Work</button>
+                                 <a href="meet-the-team.html" class="btn black-fill-btn">Who we are?</a>
+                                 <a href="what-we-do.html" class="btn white-outline-btn">How we Work</a>
                               </div>
                               <h1 class="bottom-right-text">03</h1>
                            </div>
@@ -879,7 +879,7 @@
             </table>
             <div class="mt-5">
                <div class="col-6 m-auto">
-                  <button class="book-call-btn form-control btn">Book a Call</button>
+                  <a href="date-time.html" class="book-call-btn form-control btn">Book a Call</a>
                </div>
                <div class="col-10 m-auto mt-4 text-center">
                   <p class="global-p">We will be able to advise on the best package for your business during your
