add what we do page content

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -131,8 +131,9 @@
                      <div class="container">
                         <div class="col-md-12 col-lg-8">
                            <h1 class="banner-main-heading">What We <span class="redOne-fill-color">Do.</span></h1>
-                           <h3 class="banner-sub-heading mt-4">Reach audiences on new, lucrative channels, strengthen your website or build your marketing from the ground up with The Good Marketer.</h3>
-                           <h3 class="banner-sub-heading mt-5">All services are tailored to <span class="redOne-fill-color">propel your business.</span> We make the most of trends but believe in achieving fantastic results, whatever your goals and whatever channel we’re working on.</h3>
+                           <h3 class="banner-sub-heading mt-4">Grow audiences on new, profitable channels, boost your site or build your marketing from the ground up with us.
+                              </h3>
+                           <h3 class="banner-sub-heading mt-5">All services are customized to <span class="redOne-fill-color">grow your business.</span> We make the most of the latest trends but believe in achieving excellent results, whatever your objectives and whatever channels you are working on.</h3>
                            <a href="date-time.html" class="btn book-a-call-btn mt-5">BOOK A CALL</a>
                         </div>
                      </div>
@@ -146,9 +147,23 @@
                <div class="row">
                   <div class="col-md-12 text-center">
                      <h6 class="section-small-h6">Our Services</h6>
-                     <h1 class="section-h45 mt-4">Designed to grow your business</h1>
-                     <p class="mt-5 global-p">Although we’re an experienced team, we’re not stuck in our ways. We’ll always present new ideas to help you grow as we don’t believe in letting things plateau. We’re always thinking ‘what’s next’. We pride ourselves on being a team of experts, with in-house specialists in all areas of digital marketing.</p>
-                     <p class="mt-4 global-p">All our services will be communicated in a language you can understand and we’ll handle the tricky stuff so you can focus on running your business. So, whether you know where you need help or you’re not sure what you’re looking for, get in touch to speak to an expert.</p>
+                     <h1 class="section-h45 mt-4">Our Services Designed To Grow Your Business</h1>
+                     <p class="mt-5 global-p">Although we are an expert team, we are not stuck in our ways. We will always generate new ideas and trends to help you evolve as we do not believe in letting things break.  We are not always thinking about what will be the next thing. We pride ourselves on being an expert team, with in-house professionals in all areas of Digital Marketing.
+
+                        
+                        </p>
+                     <p class="mt-4 global-p">All our services will be communicated in a language you can easily understand and we will handle the tough stuff so you can focus on running your business smoothly. So, whether you need assistance or are not sure what you want to do, get in touch with us.</p>
+                  </div>
+               </div>
+            </div>
+            <div class="container">
+               <div class="row mt-5">
+                  <div class="col-md-12 text-center">
+                     <h6 class="section-small-h6">Our Packages</h6>
+                     <p class="mt-3 global-p">We promise transparency and flexibility and that begins with the payment and packaging of your provided services. Select the package which best meets your Digital Marketing needs.</p>
+                     <p class="mt-3 global-p">As said before, we like to do things a little differently from our competitors.  We promise authenticity and flexibility and that starts with the payment and packaging. We want you to know exactly what you are getting for your payment and to make sure that digital marketing does not have to be as complicated as you think.</p>
+                     <p class="mt-3 global-p">You can choose from our packages or book a 30-minute chat to discuss customized options that will work for your business.</p>
+
                   </div>
                </div>
             </div>
